# marketpulse

./: .env.example  .gitignore  .mcp.json  .replit  1. Sistem Mimarisi.md  ARCHITECTURE.md  DEPLOY.md  IMPLEMENTATION_PLAN.md  Makefile  Proje Planı_ Pazaryeri Veri Analiz Platformu (1).md  Proje Planı_ Pazaryeri Veri Analiz Platformu (2).md  Proje Planı_ Pazaryeri Veri Analiz Platformu (3).md  Proje Planı_ Pazaryeri Veri Analiz Platformu.md  README.md  ScraperAPI + Playwright Entegrasyon Notları.md  ScraperAPI Proxy Port Metodu.md  Scraping_Architecture_Plan_v2.md  Scraping_Modular_Architecture_Plan.md  ama-agent.md  campaign_profitability_module.md.resolved  development_plan.md  hepsiburada_active_products.json  index.html  native_ai_customer_service.md.resolved  package.json  pastacila.txt  pastacilarequest.txt  plan.md  plan_2.md  product.json  product.txt  products.json  products.txt  pyproject.toml  replit.md  scrapper.md  server.py  template_schema.md  ui_gemini_review.md  ui_review.md
attached_assets/: Pasted--19-0-POST-api-url-scraper-scrape-csv-HTTP-1-1-200-OK-I_1770505154207.txt  Pasted--200-OK-INFO-10-84-4-73-0-GET-api-category-explorer-fet_1771774139113.txt  Pasted--Bright-Data-Python-Entegrasyon-Rehberi-Tarih-10-Aral-k_1765390185075.txt  Pasted--Bright-Data-vs-ScraperAPI-Maliyet-ve-Performans-Kar-la_1765454658135.txt  Pasted--Marketing-Agent-Fonksiyon-Analiz-Raporu-Bu-rapor-route_1765620885222.txt  Pasted--Marketing-Agent-Reposu-Detayl-Analiz-Raporu-Tarih-12-A_1765537431389.txt  Pasted--Replit-Deployment-Sorunu-Analizi-ve-z-m-Raporu-Yazar-M_1769530888470.txt  (+111 more)
(+229 files in other folders)
